--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ToDo App</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -11,25 +11,23 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="script.js" type="module" defer></script>
   </head>
   <body class="page">
-    <header class="app page__app">
+    <header class="app page__app" data-app>
       <h1 class="app__title">ToDo</h1>
       <div class="app__row">
-        <input type="text" class="app__input" placeholder="Add item..." />
-        <button class="button button_green app__button">
+        <input
+          type="text"
+          class="app__input"
+          placeholder="Add item..."
+          data-input
+        />
+        <button class="button button_green app__button" data-button-add>
           <i class="button__icon fas fa-plus"></i>
         </button>
       </div>
-      <ul class="app__list">
-        <!-- <li class="app__row">
-          <span class="app__text">Buy a milk</span>
-          <button class="button button_red app__button">
-            <i class="button__icon fas fa-minus"></i>
-          </button>
-        </li> -->
-      </ul>
     </header>
   </body>
 </html>
